--- a/test.css
+++ b/test.css
@@ -6,26 +6,39 @@
     <title>Document</title>
 </head>
 <body>
-    <style>
-p.a {
-  font: 15px Arial, sans-serif;
-}
+    <div id = "Header">
+        <h1> Keith the QB </h1>
+    </div>
 
-p.b {
-  font: italic small-caps bold 12px/30px Georgia, serif;
-}
-</style>
-</head>
-<body>
+<div id = "LeftNav">
+    <h3 class = "titles"> My Favorite Websites </h3>
+    <ul>
+        <li><a href="https://www.theverge.com/">The Verge</a></li>
+        <li><a href="http://www.washington.edu/">UW</a></li>
+        <li><a href="https://www.nike.com/">NIKE</a></li>
+        <li><a href="https://www.amazon.com/">Amazon</a></li>
+        <li><a href="https://gohuskies.com/">UW Athletics</a></li>
+    </ul>
+    <img src="icon.gif" width=350px" height="200px">
+   </div>
 
-<h1>The font Property</h1>
+<div id="Content">
+    <p> This is Keith Price's number one Fan Site! He is a good leader, wins games, throws awesome passes, and he also plays for The University of Washington Huskies! The Huskies have been on point this season with a starting record of 4-0.
+    br /> <span id="bow">Bow Down to Washington!!</span></p>
+    <img src="price.jpg>
+    >/div>
 
-<p class="a">This is a paragraph. The font size is set to 15 pixels, and the font family is Arial.</p>
+>div id="Footer">
+    <h3 class = "titles">Connect with Me Online: </h3>
+    <ul>
+        <li><a href="https://www.facebook.com/">Facebook</a></li>
+        <li><a href="https://www.instagram.com/">Instagram</a></li>
+        <li><a href="https://twitter.com/home?lang=en">Twitter</a></li>
+    </ul>
+    <p>Copyright of Keith the QB</p>
+</div>
 
-<p class="b">This is a paragraph. The font is set to italic and bold, with small-caps (all lowercase letters are converted to uppercase). The font size is set to 12 pixels, the line height is set to 30 pixels, and the font family is Georgia.</p>
-
-
-<img src="icon.gif" style= "height:200px; width:350px"/>
-<img src="price.jpg">
+    
 </body>
 </html>
+
