--- a/test.css
+++ b/test.css
@@ -1,44 +1,89 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <div id = "Header">
-        <h1> Keith the QB </h1>
-    </div>
 
-<div id = "LeftNav">
-    <h3 class = "titles"> My Favorite Websites </h3>
-    <ul>
-        <li><a href="https://www.theverge.com/">The Verge</a></li>
-        <li><a href="http://www.washington.edu/">UW</a></li>
-        <li><a href="https://www.nike.com/">NIKE</a></li>
-        <li><a href="https://www.amazon.com/">Amazon</a></li>
-        <li><a href="https://gohuskies.com/">UW Athletics</a></li>
-    </ul>
-    <img src="icon.gif" width=350px" height="200px">
-   </div>
+body{
+	background-image: url('dark_wood.png');
+}
 
-<div id="Content">
-    <p> This is Keith Price's number one Fan Site! He is a good leader, wins games, throws awesome passes, and he also plays for The University of Washington Huskies! The Huskies have been on point this season with a starting record of 4-0.
-    br /> <span id="bow">Bow Down to Washington!!</span></p>
-    <img src="price.jpg>
-    >/div>
+#Header{
+	width: 500px; 
+	margin-left: auto; 
+	margin-right: auto; 
+	margin-bottom: 10px; 
+	border: solid 8px black;
+	text-align: center;
+	background-color: #8E41D5; 
+}
 
->div id="Footer">
-    <h3 class = "titles">Connect with Me Online: </h3>
-    <ul>
-        <li><a href="https://www.facebook.com/">Facebook</a></li>
-        <li><a href="https://www.instagram.com/">Instagram</a></li>
-        <li><a href="https://twitter.com/home?lang=en">Twitter</a></li>
-    </ul>
-    <p>Copyright of Keith the QB</p>
-</div>
+h3{
+	color: #FFBC00;
+	font-size: 40px;
+	font-family: "Passion One";
+	margin-bottom: 0px;
 
-    
-</body>
-</html>
+}
 
+p{
+	color: white;
+	font-family: "Arial"; 
+	font-weight: bold; 
+}
+
+#Header h1{
+	font-size: 60px;
+	font-family: "Passion One";
+	color: #FFBC00;
+	font-weight: bold;
+}
+
+
+#LeftNav{
+	float: left;
+	width: 400px;
+	border: solid 8px black;
+	text-align: center;
+	padding-bottom: 8px;
+	background-color: #8E41D5; 
+}
+
+#LeftNav ul{
+	color: white;
+}
+
+a{
+	color: white;
+	font-weight: bold;
+	font-size: 24px;
+}
+
+ul{
+	list-style-type: none;
+	padding-left: 0px; 
+}
+
+#Content{
+	width: 700px;
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 10px;
+	border: solid 8px black;
+	text-align: center;
+	background-color: #8E41D5;
+	padding: 15px;
+	
+}
+
+#Footer{
+	text-align: center;
+	border: solid 8px black;
+	background-color: #8E41D5;
+
+}
+
+.titles{
+	
+}
+
+#bow{
+	color:#FFBC00;
+	font-weight: bold;
+	font-size: 20px;
+}
